# llvm-java

./: .gitignore
tools/: CMakeLists.txt
tools/llvm-java/: CMakeLists.txt
tools/llvm-java/include/llvm/Java/: ClassFile.h  Compiler.h
tools/llvm-java/lib/: CMakeLists.txt
tools/llvm-java/lib/ClassFile/: CMakeLists.txt  ClassFile.cpp
tools/llvm-java/lib/Compiler/: BasicBlockBuilder.h  CMakeLists.txt  Compiler.cpp  Locals.cpp  Locals.h  OperandStack.cpp  OperandStack.h  Resolver.cpp  Resolver.h  VMClass.cpp  VMClass.h  VMField.cpp  VMField.h  VMMethod.cpp  VMMethod.h
tools/llvm-java/lib/Transforms/: AddStubs.cpp  CMakeLists.txt
tools/llvm-java/runtime/: CMakeLists.txt  jni.c  runtime.h
tools/llvm-java/test/: Makefile
tools/llvm-java/tools/: CMakeLists.txt
tools/llvm-java/tools/class2llvm/: CMakeLists.txt  class2llvm.cpp
tools/llvm-java/tools/classdump/: CMakeLists.txt  classdump.cpp
